--- a/Blue Week Cadence.wiki
+++ b/Blue Week Cadence.wiki
@@ -30,6 +30,9 @@ Caelus:
 = Tuesday =
 BRPC:
 * [ ] 107278 - Update Burn Up Chart (Internal Only) - [[file:///R:/BRPC/107278/Project Controls/Reports/107278 Burn Up Chart.xlsx]]
+* [ ] 107278 - Update project metrics
+	* [ ] Hours CPI
+	* [ ] Dollars CPI
 * [ ] 107278 - Run and issue cost report
 	Distribution:
 		Fred Fitzhugh
@@ -38,6 +41,9 @@ BRPC:
 		Gerry Thompson
 		Mike Moora
 		Terry Caetano
+* [ ] 107315 - Update project metrics
+	* [ ] Hours CPI
+	* [ ] Dollars CPI
 * [ ] 107315 - Run and issue cost report 
 	Distribution:
 		Mark Wiggins
@@ -47,6 +53,9 @@ BRPC:
 		Mike Moora
 		Ron Otero
 		Chris Higgins
+* [ ] 107384 - Update project metrics
+	* [ ] Hours CPI
+	* [ ] Dollars CPI
 * [ ] 107384 - Run and issue cost report 
 	Distribution:
 		Mark Wiggins
@@ -56,6 +65,9 @@ BRPC:
 		Mike Moora
 		Ron Otero
 		Chris Higgins
+* [ ] 107386 - Update project metrics
+	* [ ] Hours CPI
+	* [ ] Dollars CPI
 * [ ] 107386 - Run and issue cost report 
 	Distribution:
 		Mark Wiggins
