--- a/White Week Cadence.wiki
+++ b/White Week Cadence.wiki
@@ -25,14 +25,20 @@ Caelus:
 = Tuesday =
 BRPC:
 * [ ] 107278 - Update Burn Up Chart (Internal Only) - [[file:///R:/BRPC/107278/Project Controls/Reports/107278 Burn Up Chart.xlsx]]
+* [ ] 107278 - Update project metrics
+	* [ ] Hours CPI
+	* [ ] Dollars CPI
 * [ ] 107278 - Run and issue cost report
-	Ditribution:
+	Distribution:
 		Fred Fitzhugh
 		Mark Wiggins
 		Cynthia Geiermann
 		Gerry Thompson
 		Mike Moora
 		Terry Caetano
+* [ ] 107315 - Update project metrics
+	* [ ] Hours CPI
+	* [ ] Dollars CPI
 * [ ] 107315 - Run and issue cost report 
 	Distribution:
 		Mark Wiggins
@@ -42,6 +48,9 @@ BRPC:
 		Mike Moora
 		Ron Otero
 		Chris Higgins
+* [ ] 107384 - Update project metrics
+	* [ ] Hours CPI
+	* [ ] Dollars CPI
 * [ ] 107384 - Run and issue cost report 
 	Distribution:
 		Mark Wiggins
@@ -51,6 +60,9 @@ BRPC:
 		Mike Moora
 		Ron Otero
 		Chris Higgins
+* [ ] 107386 - Update project metrics
+	* [ ] Hours CPI
+	* [ ] Dollars CPI
 * [ ] 107386 - Run and issue cost report 
 	Distribution:
 		Mark Wiggins
