--- a/diary/2015-05-18.wiki
+++ b/diary/2015-05-18.wiki
@@ -1,5 +1,21 @@
+Arrive 0800.
+
 Agenda Topics for Team Meeting
 	- Update EHTC Forecasting for all BRPC Projects.
 	- Revisions to CNs
 		- 107315 CN11, 12, 13, 15
 		- 107386 CN2, 4
+
+Saved copies of Dan Gleason CN markups into individual CN folders.
+
+Opened 107278 CN2 per Terry Caetano request.
+
+Attended BRPC Team Meeting.
+
+Prepared weekly cost report for 107278. Sent to Terry for review.
+
+Reviewed funding for 107315.
+
+Issued Program Change Log to Cynthia and sent a copy to Raj. Raj may need a simplified version.
+
+Out at 1700.
