--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -83,3 +83,5 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "Bravery is being the only one who knows you're afraid." - Franklin P. Jones
 "let the root of love be within, of this root can nothing spring but what is good." Augustine of Hippo
 "I want my children to have all the things I couldn't afford. Then I want to move in with them." - Phyllis Diller
+"Drawing on my fine command of the English language, I said nothing." - Robert Benchley
+
