--- a/EarnedValueReference.wiki
+++ b/EarnedValueReference.wiki
@@ -14,4 +14,13 @@ Earned = Budget X % Complete, hours or dollars
 Remaining Budget - The amount of budget that is left to earn.
 	Remaining Budget = Budget - Earned to date
 
+Impact of Inefficiency in Dollars:
+	Budgeted Rate * (Actual Hours - Earned Hours)
 
+Impact of Rate Differential:
+	Actual Dollars - (Actual Hours x Budgeted Rate)
+
+Impact of OT:
+	OT Dollars - (OT Hours x Regular TIme Composite Rate)
+	or,
+	OT Hours x (OT Cum Rate - Reg Rate)
