--- a/Phone Directory.wiki
+++ b/Phone Directory.wiki
@@ -1,50 +1,51 @@
-| Name        | Extension           |
-|-------------|---------------------|
-| Allyne      | 3573                |
-| Badyoczek   | 3584                |
-| Baker, B    | 3533                |
-| Baker, P    | 3386 C:509-768-5922 |
-| Barnes, C   | 3539                |
-| Belsher     | 3765                |
-| Bertagnolli | 3313                |
-| Brown       | 3034                |
-| Carleton    | 3011                |
-| Caetano     | 3768                |
-| Charette    | 3852                |
-| Crabtree    | 3372                |
-| Cunningham  | 3796                |
-| Dyer        | 3444                |
-| Eaton       | 3606                |
-| Emplit      | 3635                |
-| Evancho     | 3520                |
-| Formway     | 3364                |
-| Freeman     | 3504                |
-| Guevara     | 3490                |
-| Hellsund    | 3081                |
-| Higgins     | 3014                |
-| LaValley    | 3009                |
-| Lewis, P.   | 3767                |
-| Lewis, D.   | 3701                |
-| Mabe        | 3167                |
-| Marshburn   | 3010                |
-| Martinez    | 3700                |
-| McAllister  | 3781                |
-| McMannis    | 3499                |
-| McGowan     | 3707                |
-| McGrew      | 3467                |
-| Moora       | 3030                |
-| Olson, B    | 3086                |
-| Olson, M    | 3802                |
-| Otero       | 3130                |
-| Plagge      | 3057                |
-| Ridenhour   | 3379                |
-| Russo       | 3153                |
-| Schramer    | 3714                |
-| Schiavi     | 3056                |
-| Scott       | 3497                |
-| Smith, D    | 3132                |
-| Stonke      | 3094                |
-| Thompson    | 3471                |
-| Tolliver    | 3430                |
-| Wazny       | 3786                |
-|             |                     |
+| Name        | Extension |
+|-------------|-----------|
+| Allyne      | 3573      |
+| Badyoczek   | 3584      |
+| Baker, B    | 3533      |
+| Baker, P    | 3386      |
+| Barnes, C   | 3539      |
+| Belsher     | 3765      |
+| Bertagnolli | 3313      |
+| Brown       | 3034      |
+| Carleton    | 3011      |
+| Caetano     | 3768      |
+| Charette    | 3852      |
+| Crabtree    | 3372      |
+| Cunningham  | 3796      |
+| Dyer        | 3444      |
+| Eaton       | 3606      |
+| Emplit      | 3635      |
+| Evancho     | 3520      |
+| Formway     | 3364      |
+| Freeman     | 3504      |
+| Guevara     | 3490      |
+| Hellsund    | 3081      |
+| Higgins     | 3014      |
+| LaValley    | 3009      |
+| Lewis, P.   | 3767      |
+| Lewis, D.   | 3701      |
+| Mabe        | 3167      |
+| Marshburn   | 3010      |
+| Martinez    | 3700      |
+| McAllister  | 3781      |
+| McMannis    | 3499      |
+| McGowan     | 3707      |
+| McGrew      | 3467      |
+| Moora       | 3030      |
+| Olson, B    | 3086      |
+| Olson, M    | 3802      |
+| Otero       | 3130      |
+| Plagge      | 3057      |
+| Ridenhour   | 3379      |
+| Russo       | 3153      |
+| Schramer    | 3714      |
+| Schiavi     | 3056      |
+| Scott       | 3497      |
+| Smith, D    | 3132      |
+| Smith, R    | 3066      |
+| Stonke      | 3094      |
+| Thompson    | 3471      |
+| Tolliver    | 3430      |
+| Wazny       | 3786      |
+|             |           |
