--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -85,3 +85,4 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "I want my children to have all the things I couldn't afford. Then I want to move in with them." - Phyllis Diller
 "Drawing on my fine command of the English language, I said nothing." - Robert Benchley
 "Don't worry about the world coming to an end today. It is already tomorrow in Australia." - Charles M. Schultz
+"We must use time as a tool, not as a couch."
