--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -86,3 +86,4 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "Drawing on my fine command of the English language, I said nothing." - Robert Benchley
 "Don't worry about the world coming to an end today. It is already tomorrow in Australia." - Charles M. Schultz
 "We must use time as a tool, not as a couch."
+"The finest steel has to go through the hottest fire." - Richard M. Nixon
