--- a/White Week Cadence.wiki
+++ b/White Week Cadence.wiki
@@ -36,6 +36,7 @@ BRPC:
 		Gerry Thompson
 		Mike Moora
 		Terry Caetano
+		Craig Wilson
 * [ ] 107315 - Update project metrics
 	* [ ] Hours CPI
 	* [ ] Dollars CPI
