--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -87,3 +87,11 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "Don't worry about the world coming to an end today. It is already tomorrow in Australia." - Charles M. Schultz
 "We must use time as a tool, not as a couch."
 "The finest steel has to go through the hottest fire." - Richard M. Nixon
+"Only the wisest and stupidest of men never change." - Confucious
+"Those who do not remember the past are condemned to repeat it." - George Santayana
+"No good fish goes anywhere without a porpoise." - Lewis Carroll
+"The more laws, the less justice." - Marcus Tullius Cicero
+"You better take care of me Lord, if you don't you're gonna have me on your hands." - Hunter S. Thompson
+"Nothing is work unless you'd rather be doing something else." - George Halas
+"We owe a lot to Thomas Edison - if it wasn't for him, we'd be watching television by candlelight." - Milton Berle
+"Patience is the companion of wisdom." - Saint Augustine
