--- a/index.wiki
+++ b/index.wiki
@@ -26,7 +26,7 @@
 [[ToH2015]]
 [[WSUSigmaPi]]
 [[Portfolio to Share with Kevin at Review]]
-
+[[Parts for Chevy]]
 	
 == Checklists ==
         * [[BP Schedule Update Checklist|BP Schedule Update Checklist]]
