--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -95,3 +95,5 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "Nothing is work unless you'd rather be doing something else." - George Halas
 "We owe a lot to Thomas Edison - if it wasn't for him, we'd be watching television by candlelight." - Milton Berle
 "Patience is the companion of wisdom." - Saint Augustine
+"Begin to be now what you will be hereafter." - William James
+"I have a memory like an elephant. I remember every elephant I've ever met." - Herb Caen
