--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -97,3 +97,9 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "Patience is the companion of wisdom." - Saint Augustine
 "Begin to be now what you will be hereafter." - William James
 "I have a memory like an elephant. I remember every elephant I've ever met." - Herb Caen
+"The secrets of success are a good wife and a steady job. My wife told me." - Howard Nemerov
+uuuuund a steady job. My wife told me." - Howard Nemerov
+"Men never do evil so completely and cheerfully as when they do it from religious conviction." -Blaise Pascal
+"Work out your own salvation. Do not depend on others." - Buddha
+"I am always ready to learn although I do not always like being taught." - Winston Churchill
+A million status meetings on a project can't make up for not having a planning meeting before it started. - Meeting Boy
