--- a/index.wiki
+++ b/index.wiki
@@ -27,6 +27,9 @@
 [[WSUSigmaPi]]
 [[Portfolio to Share with Kevin at Review]]
 [[Parts for Chevy]]
+[[Parts Repairs for 4Runner]]
+[[JonAndFranksGrandTour2015]]
+
 	
 == Checklists ==
         * [[BP Schedule Update Checklist|BP Schedule Update Checklist]]
