--- a/diary/diary.wiki
+++ b/diary/diary.wiki
@@ -2,7 +2,27 @@
 
 == 2015 ==
 
+=== June ===
+        * [[2015-06-23]]
+        * [[2015-06-22]]
+        * [[2015-06-19]]
+        * [[2015-06-18]]
+        * [[2015-06-17]]
+        * [[2015-06-16]]
+        * [[2015-06-15]]
+        * [[2015-06-12]]
+        * [[2015-06-11]]
+        * [[2015-06-10]]
+        * [[2015-06-09]]
+        * [[2015-06-08]]
+        * [[2015-06-05]]
+        * [[2015-06-04]]
+        * [[2015-06-03]]
+        * [[2015-06-02]]
+        * [[2015-06-01]]
+
 === May ===
+        * [[2015-05-29]]
         * [[2015-05-28]]
         * [[2015-05-27]]
         * [[2015-05-26]]
