--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -103,3 +103,11 @@ uuuuund a steady job. My wife told me." - Howard Nemerov
 "Work out your own salvation. Do not depend on others." - Buddha
 "I am always ready to learn although I do not always like being taught." - Winston Churchill
 A million status meetings on a project can't make up for not having a planning meeting before it started. - Meeting Boy
+"There are moments on bikes when you?re concentrating so intently on the moment, the rest of the world, life, worries, memories are all pushed out of your mind as you focus on the now. There?s no such thing as perfect happiness, but on two wheels, these can get close." - Kevin Ash
+"If this is coffee, please bring me some tea; but if this is tea, please bring me some coffee." - Abraham Lincoln
+"The four building blocks of the universe are fire, water, gravel and vinyl." - Dave Barry
+"The length of this document defends it well against the risk of its being read." - Winston Churchill
+"You exist only in what you do." - Federico Fellini
+How does the old dog catch the rabbit? He waits until the rabbit gets tired. - Old Italian proverb
+¿Adventure is adversity told later in comfort.¿ - Norm Babcock, 3 time IBR finisher
+¿Life should not be a journey to the grave with the intention of arriving safely in a pretty and well preserved body, but rather to skid in broadside in a cloud of smoke, thoroughly used up, totally worn out, and loudly proclaiming "Wow! What a Ride!¿ - Hunter S. Thompson
