--- a/White Week Cadence.wiki
+++ b/White Week Cadence.wiki
@@ -27,6 +27,7 @@ BRPC:
 * [ ] 107278 - Update project metrics
 	* [ ] Hours CPI
 	* [ ] Dollars CPI
+* [ ] 107278 Check non-labor charges and advise Terry Caetano if SJ501 is at 80% of budget
 * [ ] 107278 - Run and issue cost report
 	Distribution:
 		Fred Fitzhugh
