--- a/diary/diary.wiki
+++ b/diary/diary.wiki
@@ -2,7 +2,17 @@
 
 == 2015 ==
 
+=== July ===
+        * [[2015-07-09]]
+        * [[2015-07-08]]
+        * [[2015-07-07]]
+        * [[2015-07-06]]
+        * [[2015-07-02]]
+        * [[2015-07-01]]
+
 === June ===
+        * [[2015-06-30]]
+        * [[2015-06-24]]
         * [[2015-06-23]]
         * [[2015-06-22]]
         * [[2015-06-19]]
