--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -109,5 +109,6 @@ A million status meetings on a project can't make up for not having a planning m
 "The length of this document defends it well against the risk of its being read." - Winston Churchill
 "You exist only in what you do." - Federico Fellini
 How does the old dog catch the rabbit? He waits until the rabbit gets tired. - Old Italian proverb
-¿Adventure is adversity told later in comfort.¿ - Norm Babcock, 3 time IBR finisher
-¿Life should not be a journey to the grave with the intention of arriving safely in a pretty and well preserved body, but rather to skid in broadside in a cloud of smoke, thoroughly used up, totally worn out, and loudly proclaiming "Wow! What a Ride!¿ - Hunter S. Thompson
+"Adventure is adversity told later in comfort." - Norm Babcock, 3 time IBR finisher
+"Life should not be a journey to the grave with the intention of arriving safely in a pretty and well preserved body, but rather to skid in broadside in a cloud of smoke, thoroughly used up, totally worn out, and loudly proclaiming "Wow! What a Ride!" - Hunter S. Thompson
+"All the people like us are we, and everyone else is They." - Rudyard Kipling
