07-21-2015 Commit from Work

--- a/Blue Week Cadence.wiki
+++ b/Blue Week Cadence.wiki
@@ -92,9 +92,10 @@ BRPC:
 		Chris Higgins
 		Craig Wilson
 
-* [ ] Run informational 014, 018, and 006 reports for the prior period
+* [ ] Run informational 014, 025, 018, and 006 reports for the prior period
 * [ ] Update Project Go Binder
 * [ ] Updated Weekly Cum Performance by Workgroup to Heather
+* [ ] Update Dashboard
 * [ ] Report Hours and Dollars CPIs internally to Project Leadership
 
 * [ ] Complete Time Sheet
