--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -112,3 +112,5 @@ How does the old dog catch the rabbit? He waits until the rabbit gets tired. - O
 "Adventure is adversity told later in comfort." - Norm Babcock, 3 time IBR finisher
 "Life should not be a journey to the grave with the intention of arriving safely in a pretty and well preserved body, but rather to skid in broadside in a cloud of smoke, thoroughly used up, totally worn out, and loudly proclaiming "Wow! What a Ride!" - Hunter S. Thompson
 "All the people like us are we, and everyone else is They." - Rudyard Kipling
+"I am a Mechanical Engineer - I solve Problems You Don't Know you Have in Ways you Can't Understand."
+"People resemble their times more than they resemble their parents." - Arab Proverb
