--- a/diary/2015-07-21.wiki
+++ b/diary/2015-07-21.wiki
@@ -3,3 +3,13 @@ Arrive 0800.
 Began assembling cost reports.
 
 Met with Kevin Formway to discuss PC Lead opportunity in ANC. Discussed how family needs would make a permanent move problematice. Allowed that I would be willing to consider a rotation type of position.
+
+Completed compilation of weekly cost reports.
+
+Prepared summary of funding position on 107315.415 for Ron, Heather and Werner. Getting CN16 (Trend for additional ISOs funded would make us whole.)
+
+Updated Consolidated Change Log to reflect approved change and revised funding needs. Emailed to CSG with cc: Ron Otero, Mike Moora and Werner Plagge.
+
+Briefly met with Walter Michelutti. He inquired as to how concerned Mike and Werner are. Allowed that I did not get many calls from them with questions; so it's difficult to gauge their level of concern. Walter also hinted that BRPC may be a bit behind in their payables.
+
+Out at 1705.
