--- a/Blue Week Cadence.wiki
+++ b/Blue Week Cadence.wiki
@@ -30,6 +30,7 @@ BRPC:
 	* [ ] Hours CPI
 	* [ ] Dollars CPI
 * [ ] 107278 Check non-labor charges and advise Terry Caetano if SJ501 is at 80% of budget
+* [ ] 107278 Terry Caetano review cost report before issue to client
 * [ ] 107278 - Run and issue cost report
 	Distribution:
 		Fred Fitzhugh
