--- a/Phone Directory.wiki
+++ b/Phone Directory.wiki
@@ -9,7 +9,7 @@
 | Bertagnolli | 3313      |
 | Brown       | 3034      |
 | Carleton    | 3011      |
-| Caetano     | 3768      |
+| Caetano     | 3021      |
 | Charette    | 3852      |
 | Crabtree    | 3372      |
 | Cunningham  | 3796      |
@@ -22,6 +22,7 @@
 | Guevara     | 3490      |
 | Hellsund    | 3081      |
 | Higgins     | 3014      |
+| Janacek     | 3653      |
 | LaValley    | 3009      |
 | Lewis, P.   | 3767      |
 | Lewis, D.   | 3701      |
