--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -111,12 +111,11 @@ A million status meetings on a project can't make up for not having a planning m
 How does the old dog catch the rabbit? He waits until the rabbit gets tired. - Old Italian proverb
 "Adventure is adversity told later in comfort." - Norm Babcock, 3 time IBR finisher
 "Life should not be a journey to the grave with the intention of arriving safely in a pretty and well preserved body, but rather to skid in broadside in a cloud of smoke, thoroughly used up, totally worn out, and loudly proclaiming "Wow! What a Ride!" - Hunter S. Thompson
-<<<<<<< HEAD
 "A diplomat is a man who always remembers a woman's birthday but never remembers her age." - Robert Frost
 "Act like you expect to get into the end zone." - Christopher Morley
 "I like long walks, especially when they are taken by people who annoy me." - Noel Coward
 "The fact that an opinion has been widely held is no evidence whatever that it is not utterly absurd." - Bertrand Russell
-=======
 "All the people like us are we, and everyone else is They." - Rudyard Kipling
 "I am a Mechanical Engineer - I solve Problems You Don't Know you Have in Ways you Can't Understand."
 "People resemble their times more than they resemble their parents." - Arab Proverb
+"A rich man is nothing but a poor man with money." - W. C. Fields
