--- a/White Week Cadence.wiki
+++ b/White Week Cadence.wiki
@@ -28,6 +28,7 @@ BRPC:
 	* [ ] Hours CPI
 	* [ ] Dollars CPI
 * [ ] 107278 Check non-labor charges and advise Terry Caetano if SJ501 is at 80% of budget
+* [ ] 107278 Terry Caetano review cost report before issue to client
 * [ ] 107278 - Run and issue cost report
 	Distribution:
 		Fred Fitzhugh
@@ -91,7 +92,6 @@ BRPC:
 		Craig Wilson
  
 * [ ] Run informational 014, 025, 018, and 006 reports for the prior period
-* [ ] Update Project Go Binder
 * [ ] Updated Weekly Cum Performance by Workgroup to Heather
 * [ ] Report Hours and Dollars CPIs internally to Project Leadership
 * [ ] Update Dashboard
