Monday morning commit

--- a/diary/2015-07-28.wiki
+++ b/diary/2015-07-28.wiki
@@ -3,3 +3,5 @@ Arrive 0730.
 Prepared internal snapshot report and distributed to Walter Michelutti, Jim Turner and Craig Wilson.
 
 Prepared OTPEX Missing MR report for Brent.
+
+Attended PC Department Safety meeting. Post-meeting met with Kevin. Plan is for me to become the PC Lead for the Shell PSR Program under Geoff Latimer. Angie Hintz and Greta Stribling will be my team. Shell-PSR enters invoices directly into Shell's system. Bill Richardson has been handling this. Will need to coordinate hand-off of credentials from Bill. I will relocate to Building C. Transition will take a couple of weeks from Friday. Transition will take a couple of weeks from Friday.
