--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -124,3 +124,4 @@ How does the old dog catch the rabbit? He waits until the rabbit gets tired. - O
 "I believe in luck: how else can you explain the success of those you dislike?" - Jean Cocteau
 "Nine-tenths of wisdom is being wise in time." - Theodore Roosevelt
 "We didn't lose the game; we just ran out of time." - Vince Lombardi
+"When the going gets weird, the weird turn pro." - Hunter S. Thompson
