--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -118,3 +118,4 @@ How does the old dog catch the rabbit? He waits until the rabbit gets tired. - O
 "The fact that an opinion has been widely held is no evidence whatever that it is not utterly absurd." - Bertrand Russell
 =======
 "All the people like us are we, and everyone else is They." - Rudyard Kipling
+"If you can't convince them, confuse them." - Harry S Truman
