--- a/index.wiki
+++ b/index.wiki
@@ -47,12 +47,14 @@
 	* [[Monthly Report]]
 	* [[Weekly Reporting]]
 	* [[New PO Checklist]]
+	* [[Revised PO Checklist]]
 	* [[Monthly Estimate Process]]
 	* [[Project Forecast Cost Summary]]
 	* [[PS Forecast - Monthly Manager's Work Group Forecast]]
 	* [[Monthly KPI Report]]
 	* [[Resource Forecast]]
 	* [[Invoice Processing]]
+	* [[ShellPSR Phone List]]
 
 = [[/diary/diary|Journal]] =
 
