--- a/PS Forecast - Monthly Manager's Work Group Forecast.wiki
+++ b/PS Forecast - Monthly Manager's Work Group Forecast.wiki
@@ -1,7 +1,7 @@
 = Manager's Workgroup Forecast =
 
 == Input to Manager's Monthly file ==
-* Gretta updated EHTC Forecasting
+* Gretta updates EHTC Forecasting (EF)
 * Pull EF data into EF Preliminary Review (to Latimer) workbook
 	* Open previous period's file.
 	* Save as current period file.
