--- a/Weekly Cadence.wiki
+++ b/Weekly Cadence.wiki
@@ -16,7 +16,7 @@ First week of the month:
 * [X] Receive and issue monthly Engineering and Onsite Hours/Dollars report
 
 Second week of the month:
-* [ ] After narratives complete, run 028 reports as required.
+* [X] After narratives complete, run 028 reports as required.
 * [ ] Transmit (upload to SharePoint) the Monthly Report.
 * [ ] Managers Monthly Workgroup - Internal Resource Forecast
  
@@ -28,14 +28,14 @@ Second week of the month:
 * [X] Issue weekly reports 
 	* [X] Internal
 		* [X] Island Bay Progress Report (014) 
-		* [X] Shell PSR Change Notice Summary
+		* [X] [[//bham-eng-data/share/SHELLPSR/GENERAL/PMC/PC/Island Bay - Weekly Reports/Change Management/Shell PSR CN Summary|Shell PSR Change Notice Summary]]
 		* [X] TGER Change Notice Summary (Angie) 
 		* [X] Tesoro Logistics Change Notice Summary (Angie) 
-		* [X] Work Group CPI Spreadsheet
+		* [X] [[file:///S:/SHELLPSR/GENERAL/PMC/PC/Island Bay - Weekly Reports/Island Bay Internal CPI Spreadsheet/2015/|Work Group CPI Spreadsheet]] - For Prior Week
 		* [X] Weekly Labor Report (Office)(015)
 	* [X] External
-		* [X] Weekly Labor Report (Office)(015)
-		* [X] Weekly Labor Report (Onsite)(027)
+		* [X] Weekly Labor Report (Office)(015) - For Current Month
+		* [X] Weekly Labor Report (Onsite)(027) - For Current Month
 		* [X] Shell PSR Weekly Progress Report (031)
 		* [X] Shell PSR Change Notice Summary
 * [X] Prepare (014) reports for weekly meeting; 15 copies
@@ -46,5 +46,5 @@ Second week of the month:
 == Thursday ==
 
 == Friday == 
-* [X] Update Progress Tracking
-* [X] Approve timesheet
+* [ ] Update Progress Tracking
+* [ ] Approve timesheet
