--- a/ShellPSR Phone List.wiki
+++ b/ShellPSR Phone List.wiki
@@ -8,7 +8,7 @@
 | Eaton            | 3606         |
 | Emplit           | 3635         |
 | Formway          | 3364         |
-| [[Hintz]]            | 3614         |
+| Hintz            | 3614         |
 | Holein           | 3535         |
 | Latimer          | 3420         |
 | Latimer @ Shell  | 360-293-1784 |
@@ -17,7 +17,7 @@
 | Martin, Danielle | 3527         |
 | Martin, Dena     | 360-293-1723 |
 | Peterson         | 3814         |
-| [[Stribling]]        | 3819         |
+| Stribling        | 3819         |
 | Wazny            | 3786         |
 | Wong             | 2131         |
 |                  |              |
