--- a/index.wiki
+++ b/index.wiki
@@ -55,6 +55,12 @@
 	* [[Resource Forecast]]
 	* [[Invoice Processing]]
 	* [[ShellPSR Phone List]]
+	* [[Shell Project Controls Assignments]]
+	* [[LE Update File Processing]]
+	* [[Estimated Accrual Report]]
+	* Project Controls Team
+		* [[AngieHintz]]
+		* [[GrettaStribling]]
 
 = [[/diary/diary|Journal]] =
 
