--- a/GrettaStribling.wiki
+++ b/GrettaStribling.wiki
@@ -3,3 +3,5 @@ Thursday, 20 August 2015 - Gretta was not in today. No word. Bumped into Kevin o
  I also sent email to Angie and Gretta asking that they let me know if they will have an unexpected absence.
  
 Friday, 21 August 2015 - Gretta came in briefly this morning. I asked how she was feeling. She responded, "Fine." Also met with Kevin (at his request) and provided copies of my emails to Gretta re her deliverables. Gretta had expressed concern about micromanaging and that she did not consider me her lead. Kevin is in communication with Ross Warne on the issue. Gretta left the office sometime before 1100.
+
+Monday, 24 August - Kevin found Gretta's letter of resignation on his desk this morning.
