--- a/ShellPSR Phone List.wiki
+++ b/ShellPSR Phone List.wiki
@@ -5,6 +5,7 @@
 | Baker, B         | 3533         |
 | Berhow, Diane    | 360-299-0129 |
 | Bertagnolli      | 3313         |
+| Duersch          | 3554         |
 | Eaton            | 3606         |
 | Emplit           | 3635         |
 | Formway          | 3364         |
