--- a/Estimated Accrual Report.wiki
+++ b/Estimated Accrual Report.wiki
@@ -1,6 +1,6 @@
 = Estimated Accrual Report =
 
-Data comes from Billing History:
+Labor data comes from Billing History:
 	Client: Shell Puget Sound Refinery
 	Job: Group By All Jobs
 	Sub Job: Group by All Sub Jobs
@@ -10,8 +10,12 @@ Data comes from Billing History:
 
 Using this data, forecast total hours for the month using simple ratio.
 
+Non-labor data comes from Billing Services (Mary Shoemaker). This is typically not available until Wednesday. She stores this file in [[file:///P:/Project Controls/Accounting Data/Billing by Client/]]
+
+
 Insert columns for client job number and use VLOOKUP to fill.
 
-Filter for Estimated to Bill > $50k.
+Filter for Estimated Labor to Bill > $50k.
 
 Send result to GXAOPUSPR-ProjectControls@Shell.com.
+
