--- a/LE Update File Processing.wiki
+++ b/LE Update File Processing.wiki
@@ -1,4 +1,5 @@
 * Store file in \\bham-eng-data\share\SHELLPSR\GENERAL\PMC\PC\Quarterly Reports (Shell PSR)\2015 Reports\3rd Quarter\Cost
+* LE Update file gets tored in Quarterly Reports folder for current Quarter.
 * Use to update monthly Project Cost Summary
 * Also update LE Data tab of the Monthly Report List workbook.
 * Also used to update LE in ACE.
