--- a/Monthly KPI Report.wiki
+++ b/Monthly KPI Report.wiki
@@ -3,7 +3,7 @@
 == In Reporting ==
 * Pull Actuals for all jobs worked in the period
 * Paste into Sheet 1 of \\bham-eng-data\share\SHELLPSR\GENERAL\PMC\PC\Anvil KPIs - Island Bay\06-2015\Island Bay KPIs 06-2015_Find Tool Data.xlsx
-* Using criteria, determin which jobs require KPI Reporting:
+* Using criteria, determine which jobs require KPI Reporting:
 	* Has a budget
 	* > 20% Complete
 	* Not on hold
