--- a/diary/diary.wiki
+++ b/diary/diary.wiki
@@ -2,7 +2,15 @@
 
 == 2015 ==
 
+=== September ===
+        * [[2015-09-08]]
+        * [[2015-09-04]]
+        * [[2015-09-03]]
+        * [[2015-09-02]]
+        * [[2015-09-01]]
+
 === August ===
+        * [[2015-08-31]]
         * [[2015-08-28]]
         * [[2015-08-27]]
         * [[2015-08-26]]
